# startercode-generator_openZH

./: .gitignore  README.md  config.yaml  pyproject.toml  updater.py
.github/workflows/: autoupdater.yml
_templates/: template_header.md  template_python.ipynb  template_rmarkdown.Rmd
